--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,5 @@ MONGO_URI=mongodb://localhost:port
 DATABASE=database-name
 PORT=xxxx
 THIRD_PARTY_API=https://third-party-api.com/data.json
+
+NOTE= Create a file ".env" in this folder with the data given above. 
