--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 MONGO_URI=mongodb://localhost:port
 DATABASE=database-name
-PORT=xxxx
+PORT=5000
 THIRD_PARTY_API=https://third-party-api.com/data.json
 
 NOTE= Create a file ".env" in this folder with the data given above. 
